ocaml/minocamla/minParser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | EOF

   5  top_structure : expr
   6                | top_structure_tail

   7  top_structure_tail :
   8                     | structure_item top_structure_tail

   9  use_file : use_file_tail

  10  use_file_tail : EOF
  11                | structure_item use_file_tail

  12  parse_core_type :

  13  parse_expression : expr EOF

  14  parse_pattern : EOF

  15  structure : expr structure_tail
  16            | structure_tail

  17  structure_tail :
  18                 | SEMISEMI structure
  19                 | structure_item structure_tail

  20  structure_item : OPEN UIDENT

  21  expr : simple_expr
  22       | simple_expr simple_labeled_expr_list
  23       | expr PLUS expr
  24       | expr MINUS expr
  25       | expr STAR expr

  26  simple_expr : LIDENT
  27              | INT
  28              | STRING
  29              | UIDENT
  30              | LPAREN RPAREN
  31              | LPAREN expr RPAREN

  32  simple_labeled_expr_list : simple_expr
  33                           | simple_labeled_expr_list simple_expr

  34  %entry% : '\001' implementation
  35          | '\002' interface
  36          | '\003' toplevel_phrase
  37          | '\004' use_file
  38          | '\005' parse_core_type
  39          | '\006' parse_expression
  40          | '\007' parse_pattern

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	.  error

	%entry%  goto 8


state 1
	%entry% : '\001' . implementation  (34)
	structure_tail : .  (17)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	OPEN  shift 12
	SEMISEMI  shift 13
	STRING  shift 14
	UIDENT  shift 15
	EOF  reduce 17

	implementation  goto 16
	structure  goto 17
	expr  goto 18
	structure_item  goto 19
	structure_tail  goto 20
	simple_expr  goto 21


state 2
	%entry% : '\002' . interface  (35)

	EOF  shift 22
	.  error

	interface  goto 23


state 3
	%entry% : '\003' . toplevel_phrase  (36)
	top_structure_tail : .  (7)

	EOF  shift 24
	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	OPEN  shift 12
	STRING  shift 14
	UIDENT  shift 15
	SEMISEMI  reduce 7

	toplevel_phrase  goto 25
	top_structure  goto 26
	expr  goto 27
	top_structure_tail  goto 28
	structure_item  goto 29
	simple_expr  goto 21


state 4
	%entry% : '\004' . use_file  (37)

	EOF  shift 30
	OPEN  shift 12
	.  error

	use_file  goto 31
	structure_item  goto 32
	use_file_tail  goto 33


state 5
	%entry% : '\005' . parse_core_type  (38)
	parse_core_type : .  (12)

	.  reduce 12

	parse_core_type  goto 34


state 6
	%entry% : '\006' . parse_expression  (39)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	STRING  shift 14
	UIDENT  shift 15
	.  error

	parse_expression  goto 35
	expr  goto 36
	simple_expr  goto 21


state 7
	%entry% : '\007' . parse_pattern  (40)

	EOF  shift 37
	.  error

	parse_pattern  goto 38


state 8
	$accept : %entry% . $end  (0)

	$end  accept


state 9
	simple_expr : INT .  (27)

	.  reduce 27


state 10
	simple_expr : LIDENT .  (26)

	.  reduce 26


state 11
	simple_expr : LPAREN . RPAREN  (30)
	simple_expr : LPAREN . expr RPAREN  (31)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	RPAREN  shift 39
	STRING  shift 14
	UIDENT  shift 15
	.  error

	expr  goto 40
	simple_expr  goto 21


state 12
	structure_item : OPEN . UIDENT  (20)

	UIDENT  shift 41
	.  error


state 13
	structure_tail : SEMISEMI . structure  (18)
	structure_tail : .  (17)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	OPEN  shift 12
	SEMISEMI  shift 13
	STRING  shift 14
	UIDENT  shift 15
	EOF  reduce 17

	structure  goto 42
	expr  goto 18
	structure_item  goto 19
	structure_tail  goto 20
	simple_expr  goto 21


state 14
	simple_expr : STRING .  (28)

	.  reduce 28


state 15
	simple_expr : UIDENT .  (29)

	.  reduce 29


state 16
	%entry% : '\001' implementation .  (34)

	.  reduce 34


state 17
	implementation : structure . EOF  (1)

	EOF  shift 43
	.  error


state 18
	structure : expr . structure_tail  (15)
	expr : expr . PLUS expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . STAR expr  (25)
	structure_tail : .  (17)

	MINUS  shift 44
	OPEN  shift 12
	PLUS  shift 45
	SEMISEMI  shift 13
	STAR  shift 46
	EOF  reduce 17

	structure_item  goto 19
	structure_tail  goto 47


state 19
	structure_tail : structure_item . structure_tail  (19)
	structure_tail : .  (17)

	OPEN  shift 12
	SEMISEMI  shift 13
	EOF  reduce 17

	structure_item  goto 19
	structure_tail  goto 48


state 20
	structure : structure_tail .  (16)

	.  reduce 16


state 21
	expr : simple_expr .  (21)
	expr : simple_expr . simple_labeled_expr_list  (22)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	STRING  shift 14
	UIDENT  shift 15
	EOF  reduce 21
	MINUS  reduce 21
	OPEN  reduce 21
	PLUS  reduce 21
	RPAREN  reduce 21
	SEMISEMI  reduce 21
	STAR  reduce 21

	simple_expr  goto 49
	simple_labeled_expr_list  goto 50


state 22
	interface : EOF .  (2)

	.  reduce 2


state 23
	%entry% : '\002' interface .  (35)

	.  reduce 35


state 24
	toplevel_phrase : EOF .  (4)

	.  reduce 4


state 25
	%entry% : '\003' toplevel_phrase .  (36)

	.  reduce 36


state 26
	toplevel_phrase : top_structure . SEMISEMI  (3)

	SEMISEMI  shift 51
	.  error


state 27
	top_structure : expr .  (5)
	expr : expr . PLUS expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . STAR expr  (25)

	MINUS  shift 44
	PLUS  shift 45
	STAR  shift 46
	SEMISEMI  reduce 5


state 28
	top_structure : top_structure_tail .  (6)

	.  reduce 6


state 29
	top_structure_tail : structure_item . top_structure_tail  (8)
	top_structure_tail : .  (7)

	OPEN  shift 12
	SEMISEMI  reduce 7

	top_structure_tail  goto 52
	structure_item  goto 29


state 30
	use_file_tail : EOF .  (10)

	.  reduce 10


state 31
	%entry% : '\004' use_file .  (37)

	.  reduce 37


state 32
	use_file_tail : structure_item . use_file_tail  (11)

	EOF  shift 30
	OPEN  shift 12
	.  error

	structure_item  goto 32
	use_file_tail  goto 53


state 33
	use_file : use_file_tail .  (9)

	.  reduce 9


state 34
	%entry% : '\005' parse_core_type .  (38)

	.  reduce 38


state 35
	%entry% : '\006' parse_expression .  (39)

	.  reduce 39


state 36
	parse_expression : expr . EOF  (13)
	expr : expr . PLUS expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . STAR expr  (25)

	EOF  shift 54
	MINUS  shift 44
	PLUS  shift 45
	STAR  shift 46
	.  error


state 37
	parse_pattern : EOF .  (14)

	.  reduce 14


state 38
	%entry% : '\007' parse_pattern .  (40)

	.  reduce 40


state 39
	simple_expr : LPAREN RPAREN .  (30)

	.  reduce 30


state 40
	expr : expr . PLUS expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . STAR expr  (25)
	simple_expr : LPAREN expr . RPAREN  (31)

	MINUS  shift 44
	PLUS  shift 45
	RPAREN  shift 55
	STAR  shift 46
	.  error


state 41
	structure_item : OPEN UIDENT .  (20)

	.  reduce 20


state 42
	structure_tail : SEMISEMI structure .  (18)

	.  reduce 18


state 43
	implementation : structure EOF .  (1)

	.  reduce 1


state 44
	expr : expr MINUS . expr  (24)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	STRING  shift 14
	UIDENT  shift 15
	.  error

	expr  goto 56
	simple_expr  goto 21


state 45
	expr : expr PLUS . expr  (23)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	STRING  shift 14
	UIDENT  shift 15
	.  error

	expr  goto 57
	simple_expr  goto 21


state 46
	expr : expr STAR . expr  (25)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	STRING  shift 14
	UIDENT  shift 15
	.  error

	expr  goto 58
	simple_expr  goto 21


state 47
	structure : expr structure_tail .  (15)

	.  reduce 15


state 48
	structure_tail : structure_item structure_tail .  (19)

	.  reduce 19


state 49
	simple_labeled_expr_list : simple_expr .  (32)

	.  reduce 32


state 50
	expr : simple_expr simple_labeled_expr_list .  (22)
	simple_labeled_expr_list : simple_labeled_expr_list . simple_expr  (33)

	INT  shift 9
	LIDENT  shift 10
	LPAREN  shift 11
	STRING  shift 14
	UIDENT  shift 15
	EOF  reduce 22
	MINUS  reduce 22
	OPEN  reduce 22
	PLUS  reduce 22
	RPAREN  reduce 22
	SEMISEMI  reduce 22
	STAR  reduce 22

	simple_expr  goto 59


state 51
	toplevel_phrase : top_structure SEMISEMI .  (3)

	.  reduce 3


state 52
	top_structure_tail : structure_item top_structure_tail .  (8)

	.  reduce 8


state 53
	use_file_tail : structure_item use_file_tail .  (11)

	.  reduce 11


state 54
	parse_expression : expr EOF .  (13)

	.  reduce 13


state 55
	simple_expr : LPAREN expr RPAREN .  (31)

	.  reduce 31


state 56
	expr : expr . PLUS expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr MINUS expr .  (24)
	expr : expr . STAR expr  (25)

	STAR  shift 46
	EOF  reduce 24
	MINUS  reduce 24
	OPEN  reduce 24
	PLUS  reduce 24
	RPAREN  reduce 24
	SEMISEMI  reduce 24


state 57
	expr : expr . PLUS expr  (23)
	expr : expr PLUS expr .  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . STAR expr  (25)

	STAR  shift 46
	EOF  reduce 23
	MINUS  reduce 23
	OPEN  reduce 23
	PLUS  reduce 23
	RPAREN  reduce 23
	SEMISEMI  reduce 23


state 58
	expr : expr . PLUS expr  (23)
	expr : expr . MINUS expr  (24)
	expr : expr . STAR expr  (25)
	expr : expr STAR expr .  (25)

	.  reduce 25


state 59
	simple_labeled_expr_list : simple_labeled_expr_list simple_expr .  (33)

	.  reduce 33


25 terminals, 18 nonterminals
41 grammar rules, 60 states
